--- a/wfchat/WildFireChat/en.lproj/InfoPlist.strings
+++ b/wfchat/WildFireChat/en.lproj/InfoPlist.strings
@@ -5,8 +5,8 @@
   Created by Heavyrain.lee on 2019/9/16.
   Copyright © 2019 WildFireChat. All rights reserved.
 */
-CFBundleName="【盛世】";
-CFBundleDisplayName="【盛世】";
+CFBundleName="518";
+CFBundleDisplayName="518";
 Message="Message";
 Contact="Contact";
 Discover="Disconver";
